New Html Project

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,36 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/screen.css" />
   </head>
+  <header><h1>The 1:00 = 60:00 Hobby</h1></header>
   <body>
-    <h1 class="hello-world">Hello, World!</h1>
+    <h1 class="Forgot what goes here"></h1>
+    <section>
+      <h2>
+        I enjoy creating stories using the lens and the the environment around
+        me.
+      </h2>
+      <h3>
+        It all started when I wanted to go beyond capturing still images. I
+        thought "There has to be something more to this photography stuff". So I
+        searched the internet and found a wealth of information about capturing
+        moving images.
+      </h3>
+      <br />
+      <h3>
+        I am not a professional, but I am still learning. I found a wealth of
+        information on the art and science of the craft and I am still eager to
+        learn and grow with the community in tampa. I hope to progress and and
+        make short films for festivals, social media and YouTube.
+      </h3>
+      <br />
+      <h3>
+        The next skills I will learn are
+        <ul>
+          <li>Correcting audio</li>
+          <li>Maintaining consistent lighting</li>
+          <li>Becoming proficient in movements</li>
+        </ul>
+      </h3>
+    </section>
   </body>
 </html>
