Added Commits and README

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,7 @@
     <h1 class="Forgot what goes here"></h1>
     <section>
       <h2>
-        I enjoy creating stories using the lens and the the environment around
-        me.
+        I enjoy creating stories using video and the the environment around me.
       </h2>
       <h3>
         It all started when I wanted to go beyond capturing still images. I
